Update _14_SumOfK1thK2ndSmallestElement.java